--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -17,7 +17,7 @@
 FROM golang:1.12
 WORKDIR /go/src/github.com/GoogleContainerTools/kaniko
 # Get GCR credential helper
-ADD https://github.com/GoogleCloudPlatform/docker-credential-gcr/releases/download/v1.5.0/docker-credential-gcr_linux_amd64-1.5.0.tar.gz /usr/local/bin/
+COPY files/docker-credential-gcr_linux_amd64-1.5.0.tar.gz /usr/local/bin/
 RUN tar -C /usr/local/bin/ -xvzf /usr/local/bin/docker-credential-gcr_linux_amd64-1.5.0.tar.gz
 RUN docker-credential-gcr configure-docker
 # Get Amazon ECR credential helper
@@ -27,7 +27,7 @@ RUN make -C /go/src/github.com/awslabs/amazon-ecr-credential-helper linux-amd64
 COPY . .
 RUN make
 
-FROM scratch
+FROM registry.cn-shenzhen.aliyuncs.com/linxin/scratch
 COPY --from=0 /go/src/github.com/GoogleContainerTools/kaniko/out/executor /kaniko/executor
 COPY --from=0 /usr/local/bin/docker-credential-gcr /kaniko/docker-credential-gcr
 COPY --from=0 /go/src/github.com/awslabs/amazon-ecr-credential-helper/bin/linux-amd64/docker-credential-ecr-login /kaniko/docker-credential-ecr-login
