--- a/deploy/Dockerfile_debug
+++ b/deploy/Dockerfile_debug
@@ -18,7 +18,7 @@
 FROM golang:1.12
 WORKDIR /go/src/github.com/GoogleContainerTools/kaniko
 # Get GCR credential helper
-ADD https://github.com/GoogleCloudPlatform/docker-credential-gcr/releases/download/v1.5.0/docker-credential-gcr_linux_amd64-1.5.0.tar.gz /usr/local/bin/
+COPY files/docker-credential-gcr_linux_amd64-1.5.0.tar.gz /usr/local/bin/
 RUN tar -C /usr/local/bin/ -xvzf /usr/local/bin/docker-credential-gcr_linux_amd64-1.5.0.tar.gz
 RUN docker-credential-gcr configure-docker
 # Get Amazon ECR credential helper
@@ -28,13 +28,13 @@ COPY . .
 RUN make && make out/warmer
 
 # Stage 1: Get the busybox shell
-FROM gcr.io/cloud-builders/bazel:latest
+FROM registry.cn-shenzhen.aliyuncs.com/linxin/busybox
 RUN git clone https://github.com/GoogleContainerTools/distroless.git
 WORKDIR /distroless
 RUN bazel build //experimental/busybox:busybox_tar
 RUN tar -C /distroless/bazel-bin/experimental/busybox/ -xf /distroless/bazel-bin/experimental/busybox/busybox.tar
 
-FROM scratch
+FROM registry.cn-shenzhen.aliyuncs.com/linxin/scratch
 COPY --from=0 /go/src/github.com/GoogleContainerTools/kaniko/out/* /kaniko/
 COPY --from=0 /usr/local/bin/docker-credential-gcr /kaniko/docker-credential-gcr
 COPY --from=0 /go/src/github.com/awslabs/amazon-ecr-credential-helper/bin/linux-amd64/docker-credential-ecr-login /kaniko/docker-credential-ecr-login
